--- a/src/about.css
+++ b/src/about.css
@@ -1,5 +1,5 @@
 .about_container {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: linear-gradient(
     to bottom,
