--- a/src/mockup.css
+++ b/src/mockup.css
@@ -1,6 +1,6 @@
 .mockup_container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(
       to bottom,
       var(--primary-color),
@@ -11,6 +11,7 @@
     flex-wrap: wrap; 
     justify-content: center; 
     align-items: center;
+    padding-bottom: 5vh;
   }
   
   .mockup_image_wrapper {
